--- a/package.json
+++ b/package.json
@@ -1,42 +1,60 @@
 {
-  "name": "mevnproject",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "E-Vaksin",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "axios": "^0.25.0",
+        "core-js": "^3.6.5",
+        "face-api.js": "^0.22.2",
+        "firebase": "9.6.11",
+        "html-to-image": "^1.9.0",
+        "http-proxy-middleware": "^2.0.6",
+        "qrcode.vue": "^1.7.0",
+        "vue": "^2.6.11",
+        "vue-google-charts": "^0.3.3",
+        "vue-qrcode-reader": "^3.1.0",
+        "vue-router": "^3.5.3",
+        "vue-web-cam": "^1.9.0",
+        "vue2-google-maps": "^0.10.7",
+        "vuetify": "^2.6.2",
+        "vuex": "^3.6.2",
+        "vuex-persistedstate": "^4.1.0"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@mdi/font": "^6.5.95",
+        "@mdi/js": "^6.5.95",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
+        "material-design-icons-iconfont": "^6.1.1",
+        "sass-loader": "^10.2.1",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
